--- a/estilo/style.css
+++ b/estilo/style.css
@@ -101,7 +101,7 @@ section#img02 {
 
 }
 section#img03 {
-    background-image: url(../imagens/FerndoPessoa4.png);
+    background-image: url(../imagens/FerndoPessoa.png);
     background-size: 100%;
 }
 
