--- a/estilo/style.css
+++ b/estilo/style.css
@@ -102,7 +102,8 @@ section#img02 {
 }
 section#img03 {
     background-image: url(../imagens/FerndoPessoa.png);
-    background-size: 100%;
+    background-position: center center;
+  
    
 }
 
