--- a/estilo/style.css
+++ b/estilo/style.css
@@ -101,8 +101,8 @@ section#img02 {
 
 }
 section#img03 {
-    background-image: url(../imagens/FerndoPessoa.png);
-    background-position: center center;
+    background-image: url(../imagens/FerndoPessoa2.png);
+   
   
    
 }
